v1.0/_sources/examples/calculations/Dewpoint_and_Mixing_Ratio.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/calculations/Dewpoint_and_Mixing_Ratio.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_examples_calculations_Dewpoint_and_Mixing_Ratio.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_calculations_Dewpoint_and_Mixing_Ratio.py:


Dewpoint and Mixing Ratio
=========================

Use functions from `metpy.calc` as well as pint's unit support to perform calculations.

The code below converts the mixing ratio value into
a value for vapor pressure assuming both 1000mb and 850mb ambient air
pressure values. It also demonstrates converting the resulting dewpoint
temperature to degrees Fahrenheit.

.. GENERATED FROM PYTHON SOURCE LINES 15-18

.. code-block:: default

    import metpy.calc as mpcalc
    from metpy.units import units








.. GENERATED FROM PYTHON SOURCE LINES 19-20

Create a test value of mixing ratio in grams per kilogram

.. GENERATED FROM PYTHON SOURCE LINES 20-23

.. code-block:: default

    mixing = 10 * units('g/kg')
    print(mixing)





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    10.0 gram / kilogram




.. GENERATED FROM PYTHON SOURCE LINES 24-26

Now throw that value with units into the function to calculate
the corresponding vapor pressure, given a surface pressure of 1000 mb

.. GENERATED FROM PYTHON SOURCE LINES 26-29

.. code-block:: default

    e = mpcalc.vapor_pressure(1000. * units.mbar, mixing)
    print(e)





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    15823.863685716977 gram * millibar / kilogram




.. GENERATED FROM PYTHON SOURCE LINES 30-31

Take the odd units and force them to millibars

.. GENERATED FROM PYTHON SOURCE LINES 31-33

.. code-block:: default

    print(e.to(units.mbar))





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    15.823863685716978 millibar




.. GENERATED FROM PYTHON SOURCE LINES 34-35

Take the raw vapor pressure and throw into the dewpoint function

.. GENERATED FROM PYTHON SOURCE LINES 35-38

.. code-block:: default

    td = mpcalc.dewpoint(e)
    print(td)





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    13.854699858753728 degree_Celsius




.. GENERATED FROM PYTHON SOURCE LINES 39-40

Which can of course be converted to Fahrenheit

.. GENERATED FROM PYTHON SOURCE LINES 40-42

.. code-block:: default

    print(td.to('degF'))





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    56.93845974575668 degree_Fahrenheit




.. GENERATED FROM PYTHON SOURCE LINES 43-44

Now do the same thing for 850 mb, approximately the pressure of Denver

.. GENERATED FROM PYTHON SOURCE LINES 44-47

.. code-block:: default

    e = mpcalc.vapor_pressure(850. * units.mbar, mixing)
    print(e.to(units.mbar))





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    13.45028413285943 millibar




.. GENERATED FROM PYTHON SOURCE LINES 48-49

And print the corresponding dewpoint

.. GENERATED FROM PYTHON SOURCE LINES 49-51

.. code-block:: default

    td = mpcalc.dewpoint(e)
    print(td, td.to('degF'))




.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    11.377098919513376 degree_Celsius 52.47877805512405 degree_Fahrenheit





.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.008 seconds)


.. _sphx_glr_download_examples_calculations_Dewpoint_and_Mixing_Ratio.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: Dewpoint_and_Mixing_Ratio.py <Dewpoint_and_Mixing_Ratio.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: Dewpoint_and_Mixing_Ratio.ipynb <Dewpoint_and_Mixing_Ratio.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
